# UserSpace

./: db.sqlite3  manage.py  pyproject.toml
theUserSpace/: asgi.py  settings.py  urls.py  wsgi.py
userspace/: admin.py  forms.py  models.py  urls.py  views.py
userspace/migrations/: 0001_initial.py  0002_myuser_displayname.py
userspace/templates/: form.html  index.html  profile.html
